# fastotv

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  COPYRIGHT  CPPLINT.cfg  README.md
src/: CMakeLists.txt  auth_info.cpp  auth_info.h  channel_info.cpp  channel_info.h  channels_info.cpp  channels_info.h  chat_message.cpp  chat_message.h  client.cpp  client.h  client_commands.h  client_info.cpp  client_info.h  client_server_types.cpp  client_server_types.h  cmdutils.c  cmdutils.cpp  cmdutils.h  common_types.cpp  common_types.h  config.h  epg_info.cpp  epg_info.h  events.cpp  events.h  ffmpeg_config.h.in  infos.cpp  infos.h  main.c  main.cpp  network_controller.cpp  network_controller.h  ping_info.cpp  ping_info.h  player.cpp  player.h  programme_info.cpp  programme_info.h  runtime_channel_info.cpp  (+16 more)
src/client/: CMakeLists.txt  av_sdl_utils.cpp  av_sdl_utils.h  chat_list_window.cpp  chat_list_window.h  chat_window.cpp  chat_window.h  cmdutils.cpp  cmdutils.h  commands.cpp  commands.h  config.cpp  config.h  ffmpeg_application.cpp  ffmpeg_application.h  ffmpeg_config.h.in  ioservice.cpp  ioservice.h  isimple_player.cpp  isimple_player.h  load_config.cpp  load_config.h  main.cpp  main_wrapper.cpp  main_wrapper.h  network_controller.cpp  network_controller.h  player.cpp  player.h  player_main.cpp  player_options.cpp  player_options.h  playlist_entry.cpp  playlist_entry.h  playlist_window.cpp  playlist_window.h  programs_window.cpp  programs_window.h  sdl_utils.cpp  sdl_utils.h  (+12 more)
src/client/bandwidth/: bandwidth_client.cpp  bandwidth_client.h  tcp_bandwidth_client.cpp  tcp_bandwidth_client.h
src/client/core/: CMakeLists.txt  MediaConfig.cmake  app_options.cpp  app_options.h  audio_frame.cpp  audio_frame.h  audio_params.cpp  audio_params.h  av_utils.cpp  av_utils.h  bandwidth_estimation.cpp  bandwidth_estimation.h  clock.cpp  clock.h  decoder.cpp  decoder.h  ffmpeg_internal.c  ffmpeg_internal.cpp  ffmpeg_internal.h  ffmpeg_vaapi.c  ffmpeg_vaapi.cpp  ffmpeg_vaapi.h  ffmpeg_vdpau.c  ffmpeg_vdpau.cpp  ffmpeg_vdpau.h  frame_queue.cpp  frame_queue.h  packet_queue.cpp  packet_queue.h  ring_buffer.cpp  ring_buffer.h  sdl_utils.cpp  sdl_utils.h  stream.cpp  stream.h  stream_info.cpp  stream_info.h  stream_info.h.iz2324  stream_statistic.cpp  stream_statistic.h  (+10 more)
src/client/events/: network_events.cpp  network_events.h
src/client/inner/: inner_tcp_handler.cpp  inner_tcp_handler.h  inner_tcp_server.cpp  inner_tcp_server.h
src/client/inputs/: lirc_input_client.cpp  lirc_input_client.h
src/client/live_stream/: playlist_entry.cpp  playlist_entry.h  playlist_window.cpp  playlist_window.h
src/client/player/: CMakeLists.txt  av_sdl_utils.cpp  av_sdl_utils.h  cmdutils.cpp  cmdutils.h  config.cpp  config.h  ffmpeg_application.cpp  ffmpeg_application.h  isimple_player.cpp  isimple_player.h  player_options.cpp  player_options.h  sdl_utils.cpp  sdl_utils.h  stream_handler.cpp  stream_handler.h  utils.cpp  utils.h
src/client/vod/: vod_entry.cpp  vod_entry.h  vods_window.cpp  vods_window.h
src/commands/: commands.cpp  commands.h
src/commands_info/: auth_info.cpp  auth_info.h  channel_info.cpp  channel_info.h  channels_info.cpp  channels_info.h  chat_message.cpp  chat_message.h  client_info.cpp  client_info.h  epg_info.cpp  epg_info.h  ping_info.cpp  ping_info.h  programme_info.cpp  programme_info.h  runtime_channel_info.cpp  runtime_channel_info.h  server_info.cpp  server_info.h
src/core/: app_options.cpp  app_options.h  audio_frame.cpp  audio_frame.h  audio_params.cpp  audio_params.h  clock.cpp  clock.h  cmd_utils.c  cmd_utils.cpp  cmd_utils.h  decoder.cpp  decoder.h  frame_queue.c  frame_queue.cpp  frame_queue.h  packet_queue.cpp  packet_queue.h  ring_buffer.cpp  ring_buffer.h  stream.cpp  stream.h  stream_engine.cpp  stream_engine.h  stream_helper.c  stream_helper.h  subtitle_frame.cpp  subtitle_frame.h  threads.c  threads.cpp  threads.h  types.c  types.cpp  types.h  utils.cpp  utils.h  video_frame.cpp  video_frame.h  video_state.cpp  video_state.h  (+2 more)
src/core/application/: sdl2_application.cpp  sdl2_application.h
src/core/events/: events.cpp  events.h  events_base.cpp  events_base.h  key_events.cpp  key_events.h  mouse_events.cpp  mouse_events.h  network_events.cpp  network_events.h  stream_events.cpp  stream_events.h  window_events.cpp  window_events.h
src/inner/: client_inner_server.cpp  client_inner_server.h  inner_client.cpp  inner_client.h  inner_server_command_seq_parser.cpp  inner_server_command_seq_parser.h  inner_server_handler.cpp  inner_server_handler.h
src/network/: CMakeLists.txt  event_loop.cpp  event_loop.h  io_client.cpp  io_client.h  io_server.cpp  io_server.h  loop_controller.cpp  loop_controller.h  types.cpp  types.h
src/network/tcp/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/png/: png_reader.c  png_reader.h
src/protocol/: protocol.cpp  protocol.h  types.cpp  types.h
src/redis/: redis_helpers.cpp  redis_helpers.h
src/serializer/: iserializer.cpp  iserializer.h  json_serializer.cpp  json_serializer.h
src/server/: CMakeLists.txt  commands.cpp  commands.h  config.cpp  config.h  main.cpp  responce_info.cpp  responce_info.h  server_auth_info.cpp  server_auth_info.h  server_commands.h  server_config.h  server_host.cpp  server_host.h  user_info.cpp  user_info.h  user_request_info.cpp  user_request_info.h  user_response_info.cpp  user_response_info.h  user_rpc_info.cpp  user_rpc_info.h  user_state_info.cpp  user_state_info.h
src/server/inner/: inner_external_notifier.cpp  inner_external_notifier.h  inner_tcp_client.cpp  inner_tcp_client.h  inner_tcp_handler.cpp  inner_tcp_handler.h  inner_tcp_server.cpp  inner_tcp_server.h
src/server/redis/: redis_config.cpp  redis_config.h  redis_connect.cpp  redis_connect.h  redis_helpers.cpp  redis_helpers.h  redis_pub_sub.cpp  redis_pub_sub.h  redis_pub_sub_handler.cpp  redis_pub_sub_handler.h  redis_storage.cpp  redis_storage.h  redis_sub_config.cpp  redis_sub_config.h
src/server/rpc/: user_request_info.cpp  user_request_info.h  user_response_info.cpp  user_response_info.h  user_rpc_info.cpp  (+1 more)
(+264 files in other folders)
